==> apache/nuttx/boards/arm/stm32/stm3240g-eval/src/stm32_lcd.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/board.h>
#include <nuttx/spi/spi.h>
#include <nuttx/lcd/lcd.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "stm32.h"
#include "stm3240g-eval.h"
#  define CONFIG_LCD_MAXCONTRAST 1
#  define CONFIG_LCD_MAXPOWER 1
#  define CONFIG_LCD_LANDSCAPE 1
#  define STM3240G_XRES       320
#  define STM3240G_YRES       240
#  define STM3240G_XRES       240
#  define STM3240G_YRES       320
#define STM3240G_BPP          16
#define STM3240G_COLORFMT     FB_FMT_RGB16_565
#define STM3240G_LCDBASE      ((uintptr_t)(0x60000000 | 0x08000000))
#define LCD                   ((struct lcd_regs_s *)STM3240G_LCDBASE)
#define LCD_REG_0             0x00
#define LCD_REG_1             0x01
#define LCD_REG_2             0x02
#define LCD_REG_3             0x03
#define LCD_REG_4             0x04
#define LCD_REG_5             0x05
#define LCD_REG_6             0x06
#define LCD_REG_7             0x07
#define LCD_REG_8             0x08
#define LCD_REG_9             0x09
#define LCD_REG_10            0x0a
#define LCD_REG_12            0x0c
#define LCD_REG_13            0x0d
#define LCD_REG_14            0x0e
#define LCD_REG_15            0x0f
#define LCD_REG_16            0x10
#define LCD_REG_17            0x11
#define LCD_REG_18            0x12
#define LCD_REG_19            0x13

static void stm3240g_setcursor(uint16_t col, uint16_t row)
{
  stm3240g_writereg(LCD_REG_32, row); /* GRAM horizontal address */
  stm3240g_writereg(LCD_REG_33, col); /* GRAM vertical address */
}

static int stm3240g_putrun(struct lcd_dev_s *dev,
                           fb_coord_t row, fb_coord_t col,
                           const uint8_t *buffer, size_t npixels)
{
  const uint16_t *src = (const uint16_t *)buffer;
  int i;

  /* Buffer must be provided and aligned to a 16-bit address boundary */

  lcdinfo("row: %d col: %d npixels: %d\n", row, col, npixels);
  DEBUGASSERT(buffer && ((uintptr_t)buffer & 1) == 0);

  /* Write the run to GRAM. */

#ifdef CONFIG_LCD_LANDSCAPE
  /* Convert coordinates -- Here the edge away from the row of buttons on
   * the STM3240G-EVAL is used as the top.
   */

  /* Write the GRAM data, manually incrementing X */

  for (i = 0; i < npixels; i++)
    {
      /* Write the next pixel to this position */

      stm3240g_setcursor(col, row);
      stm3240g_gramselect();
      stm3240g_writegram(*src++);

      /* Increment to next column */

      col++;
    }
#elif defined(CONFIG_LCD_RLANDSCAPE)
  /* Convert coordinates -- Here the edge next to the row of buttons on
   * the STM3240G-EVAL is used as the top.
   */

  col = (STM3240G_XRES - 1) - col;
  row = (STM3240G_YRES - 1) - row;

  /* Set the cursor position */

  stm3240g_setcursor(col, row);

  /* Then write the GRAM data, auto-decrementing X */

  stm3240g_gramselect();
  for (i = 0; i < npixels; i++)
    {
      /* Write the next pixel to this position
       * (auto-decrements to the next column)
       */

      stm3240g_writegram(*src++);
    }
#elif defined(CONFIG_LCD_PORTRAIT)

  /* Convert coordinates.
   * In this configuration, the top of the display is to the left of the
   * buttons  (if the board is held so that the buttons are at the bottom of
   * the board).
   */

  col = (STM3240G_XRES - 1) - col;

  /* Then write the GRAM data, manually incrementing Y (which is col) */

  for (i = 0; i < npixels; i++)
    {
      /* Write the next pixel to this position */

      stm3240g_setcursor(row, col);
      stm3240g_gramselect();
      stm3240g_writegram(*src++);

      /* Increment to next column */

      col--;
    }
#else /* CONFIG_LCD_RPORTRAIT */

  /* Convert coordinates.
   * In this configuration, the top of the display is to the right of the
   * buttons (if the board is held so that the buttons are at the bottom of
   * the board).
   */

  row = (STM3240G_YRES - 1) - row;

  /* Then write the GRAM data, manually incrementing Y (which is col) */

  for (i = 0; i < npixels; i++)
    {
      /* Write the next pixel to this position */

      stm3240g_setcursor(row, col);
      stm3240g_gramselect();
      stm3240g_writegram(*src++);

      /* Decrement to next column */

      col++;
    }
#endif

  return OK;
}

static int stm3240g_getrun(struct lcd_dev_s *dev,
                           fb_coord_t row, fb_coord_t col,
                           uint8_t *buffer, size_t npixels)
{
  uint16_t *dest = (uint16_t *)buffer;
  void (*readsetup)(uint16_t *accum);
  uint16_t (*readgram)(uint16_t *accum);
  uint16_t accum;
  int i;

  /* Buffer must be provided and aligned to a 16-bit address boundary */

  lcdinfo("row: %d col: %d npixels: %d\n", row, col, npixels);
  DEBUGASSERT(buffer && ((uintptr_t)buffer & 1) == 0);

  /* Configure according to the LCD type.
   * Kind of silly with only one LCD type.
   */

  switch (g_lcddev.type)
   {
     case LCD_TYPE_ILI9320:
     case LCD_TYPE_ILI9325:
       readsetup = stm3240g_readnosetup;
       readgram  = stm3240g_readnoshift;
       break;

     default:  /* Shouldn't happen */
       return -ENOSYS;
   }

  /* Read the run from GRAM. */

#ifdef CONFIG_LCD_LANDSCAPE
  /* Convert coordinates -- Here the edge away from the row of buttons on
   * the STM3240G-EVAL is used as the top.
   */

  for (i = 0; i < npixels; i++)
    {
      /* Read the next pixel from this position */

      stm3240g_setcursor(row, col);
      stm3240g_gramselect();
      readsetup(&accum);
      *dest++ = readgram(&accum);

      /* Increment to next column */

      col++;
    }
#elif defined(CONFIG_LCD_RLANDSCAPE)
  /* Convert coordinates -- Here the edge next to the row of buttons on
   * the STM3240G-EVAL is used as the top.
   */

  col = (STM3240G_XRES - 1) - col;
  row = (STM3240G_YRES - 1) - row;

  /* Set the cursor position */

  stm3240g_setcursor(col, row);

  /* Then read the GRAM data, auto-decrementing Y */

  stm3240g_gramselect();

  /* Prime the pump for unaligned read data */

  readsetup(&accum);

  for (i = 0; i < npixels; i++)
    {
      /* Read the next pixel from this position
       * (autoincrements to the next row)
       */

      *dest++ = readgram(&accum);
    }
#elif defined(CONFIG_LCD_PORTRAIT)
  /* Convert coordinates.
   * In this configuration, the top of the display is to the left of the
   * buttons (if the board is held so that the buttons are at the bottom of
   * the board).
   */

  col = (STM3240G_XRES - 1) - col;

  /* Then read the GRAM data, manually incrementing Y (which is col) */

  for (i = 0; i < npixels; i++)
    {
      /* Read the next pixel from this position */

      stm3240g_setcursor(row, col);
      stm3240g_gramselect();
      readsetup(&accum);
      *dest++ = readgram(&accum);

      /* Increment to next column */

      col--;
    }
#else /* CONFIG_LCD_RPORTRAIT */
  /* Convert coordinates.
   * In this configuration, the top of the display is to the right of the
   * buttons (if the board is held so that the buttons are at the bottom of
   * the board).
   */

  row = (STM3240G_YRES - 1) - row;

  /* Then write the GRAM data, manually incrementing Y (which is col) */

  for (i = 0; i < npixels; i++)
    {
      /* Write the next pixel to this position */

      stm3240g_setcursor(row, col);
      stm3240g_gramselect();
      readsetup(&accum);
      *dest++ = readgram(&accum);

      /* Decrement to next column */

      col++;
    }
#endif

  return OK;
}

static int stm3240g_getpower(struct lcd_dev_s *dev)
{
  lcdinfo("power: %d\n", 0);
  return g_lcddev.power;
}

static int stm3240g_setpower(struct lcd_dev_s *dev, int power)
{
  lcdinfo("power: %d\n", power);
  DEBUGASSERT((unsigned)power <= CONFIG_LCD_MAXPOWER);

  /* Set new power level */

  if (power > 0)
    {
      /* Then turn the display on */

#if !defined(CONFIG_STM3240G_ILI9320_DISABLE) || !defined(CONFIG_STM3240G_ILI9325_DISABLE)
      stm3240g_writereg(LCD_REG_7, 0x0173);
#endif
      g_lcddev.power = power;
    }
  else
    {
      /* Turn the display off */

      stm3240g_poweroff();
    }

  return OK;
}

int board_lcd_initialize(void)
{
  lcdinfo("Initializing\n");

  /* Configure GPIO pins and configure the FSMC to support the LCD */

  stm32_selectlcd();

  /* Configure and enable LCD */

  up_mdelay(50);
  stm3240g_lcdinitialize();

  /* Clear the display (setting it to the color 0=black) */

  stm3240g_lcdclear(0);

  /* Turn the display off */

  stm3240g_poweroff();
  return OK;
}

void board_lcd_uninitialize(void)
{
  stm3240g_poweroff();
  stm32_deselectlcd();
}
